--- a/src/app/modules/tender-lift/pages/tender-lift/tender-lift.component.html
+++ b/src/app/modules/tender-lift/pages/tender-lift/tender-lift.component.html
@@ -1,4 +1,4 @@
 <div>
-  <app-breadcrumb></app-breadcrumb>
   <app-tender-lift-content></app-tender-lift-content>
+  <app-gallery-section></app-gallery-section>
 </div>
