--- a/src/app/shared/components/about-section/about-section.component.html
+++ b/src/app/shared/components/about-section/about-section.component.html
@@ -7,7 +7,7 @@
         data-aos="fade-right"
       >
         <a
-          href=""
+          href="https://www.youtube.com/watch?v=F7si1ETtj3k"
           class="venobox play-btn mb-4"
           data-vbtype="video"
           data-autoplay="true"
@@ -18,7 +18,7 @@
         class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5"
         data-aos="fade-left"
       >
-        <h3>Who we are and How we do it</h3>
+        <h3>Who we are and What we do</h3>
         <p>
           Jesus Children Missions is a Christian Children Ministry committied to
           raising a Godly generation of young men and women. By exposing them to
@@ -27,8 +27,8 @@
         </p>
 
         <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-          <div class="icon"><i class="bx bx-fingerprint"></i></div>
-          <h4 class="title"><a href="">Christian Children Ministry</a></h4>
+          <div class="icon"><i class="bx bx-church"></i></div>
+          <h4 class="title"><a href="">Children Ministry</a></h4>
           <p class="description">
             Jesus Children Missions is a Christian Children Ministry committied
             to raising a Godly generation of young men and women. By exposing
@@ -39,11 +39,10 @@
         </div>
 
         <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-          <div class="icon"><i class="bx bx-gift"></i></div>
+          <div class="icon"><i class="bx bx-book-reader"></i></div>
           <h4 class="title">
             <a href=""
-              >All the Children under our care and managament are enrolled in
-              schools</a
+              >Education</a
             >
           </h4>
           <p class="description">
@@ -53,8 +52,8 @@
         </div>
 
         <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
-          <div class="icon"><i class="bx bx-atom"></i></div>
-          <h4 class="title"><a href="">What a Great Academy</a></h4>
+          <div class="icon"><i class="bx bx-happy-heart-eyes"></i></div>
+          <h4 class="title"><a href="">Outreach Programs</a></h4>
           <p class="description">
             Therefore since inception, we have never wavered in our committment
             to providing the best environment for the Children to succeed
