--- a/src/app/shared/components/details-section/details-section.component.html
+++ b/src/app/shared/components/details-section/details-section.component.html
@@ -2,10 +2,8 @@
     <div class="container">
 
       <div class="row content">
-        <div class="col-md-4" data-aos="fade-right">
-          <img src="" class="img-fluid" alt="">
-        </div>
-        <div class="col-md-8 pt-4" data-aos="fade-up">
+        
+        <div class="col-md-12 pt-4" data-aos="fade-up">
           <h3>General Needs
           </h3>
           <p class="font-italic">
@@ -13,23 +11,26 @@
           </p>
           <ul>
             <li><i class="icofont-check"></i> Buses for transportation</li>
-            <li><i class="icofont-check"></i> Food (All kinds of food items)</li>
+            <li><i class="icofont-check"></i> Food Items(All kinds)</li>
             <li><i class="icofont-check"></i> Cash Donations</li>
           </ul>
           <p>
             Here you will find a list of some of our most urgent needs.  
           </p>
-          <div class="">
-            <a routerLink="/tenderlift" class="btn-get-started">Read More</a>
-          </div>
+         
+          <a routerLink="/support" class="btn-get-started">Read More</a>
+          
         </div>
+        <!-- <div class="col-md-4" data-aos="fade-right">
+          <img src="" class="img-fluid" alt="">
+        </div> -->
       </div>
 
       <div class="row content">
-        <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
+        <!-- <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
           <img src="" class="img-fluid" alt="">
-        </div>
-        <div class="col-md-8 pt-5 order-2 order-md-1" data-aos="fade-up">
+        </div> -->
+        <div class="col-md-12  order-2 order-md-1" data-aos="fade-up">
           <h3>We need your support</h3>
           <p class="font-italic">
             Jesus Children Missions relies on the support of our partners to give the Children under our care sound education, vocational skills, shelter, food, clothing etc. The generous donations we receive from people on behalf of the children is our main source of funding.
@@ -38,7 +39,7 @@
             We hope that you too will be touched to reach out to us.
           </p>
           <div class="">
-            <a routerLink="/contact" class="btn-get-started">Reach Out to us</a>
+            <a routerLink="/contact" class="btn-get-started">Contact us</a>
           </div>
         </div>
         
