--- a/src/app/shared/components/gallery-section/gallery-section.component.html
+++ b/src/app/shared/components/gallery-section/gallery-section.component.html
@@ -10,67 +10,132 @@
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="https://smicks11.github.io/supremechords/assets/img/james.jpg" alt="" class="img-fluid">
+            <a href="../../../../assets/images/67567211_2257958410976423_7612797037132119489_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="../../../../assets/images/67567211_2257958410976423_7612797037132119489_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="150">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/66128288_2765861280108284_4803313284945467567_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/66128288_2765861280108284_4803313284945467567_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="200">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/67739858_367970287210310_8220264435906508393_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/67739858_367970287210310_8220264435906508393_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="250">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/67481223_158213058698421_4274002733795776897_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/67481223_158213058698421_4274002733795776897_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/62249422_1069124716611071_1436832193790549341_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/62249422_1069124716611071_1436832193790549341_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="350">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/67759586_1186756031523622_4809544507882298385_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/67759586_1186756031523622_4809544507882298385_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/67759586_1186756031523622_4809544507882298385_n.jpg" class="venobox" data-gall="gallery-item">
+              <img src="https://smicks11.github.io/supremechords/assets/img/67759586_1186756031523622_4809544507882298385_n.jpg" alt="" class="img-fluid">
             </a>
           </div>
         </div>
 
         <div class="col-lg-3 col-md-4">
           <div class="gallery-item" data-aos="zoom-in" data-aos-delay="450">
-            <a href="" class="venobox" data-gall="gallery-item">
-              <img src="" alt="" class="img-fluid">
+            <a href="https://smicks11.github.io/supremechords/assets/img/68823465_2589444291076927_7384848896499721112_n.jpg" class="venobox" data-gall="gallery-item">
+              <div class="transparent">
+                <img src="https://smicks11.github.io/supremechords/assets/img/68823465_2589444291076927_7384848896499721112_n.jpg" alt="" class="img-fluid">
+              </div>
+              <div class="text-center">
+                <h2>See More Photos</h2>
+              </div>
+             
             </a>
           </div>
         </div>
+
+
+        <!-- List of hidden images -->
+
+       
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6393377/pexels-photo-6393377.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6393377/pexels-photo-6393377.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/5896631/pexels-photo-5896631.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/5896631/pexels-photo-5896631.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6437805/pexels-photo-6437805.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6437805/pexels-photo-6437805.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+          <div class="gallery-item hidden-img">
+            <a href="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" class="venobox" data-gall="gallery-item">
+              <img src="https://images.pexels.com/photos/6190669/pexels-photo-6190669.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="" class="img-fluid">
+            </a>
+          </div>
+        
+        
 
       </div>
 
