--- a/src/app/shared/components/support-content/support-content.component.html
+++ b/src/app/shared/components/support-content/support-content.component.html
@@ -2,14 +2,16 @@
     <div class="container">
         <div>
             <div class="section-title">
+                <!-- <h2>
+                   We need your support
+                </h2> -->
                 <h2>
                    We need your support
                 </h2>
-                <p>
-                   We need your support
-                </p>
             </div>
-          <p>The major challenge is acquiring permanent buildings for shelters/home, schools and office for the Project.</p>
+          <!-- <p>The major challenge is acquiring permanent buildings for shelters/home, schools and office for the Project.</p> -->
+          <p>Jesus Children Missions relies on the support of our partners to give the Children under our care sound education, vocational skills, shelter, food, clothing etc. The generous donations we receive from people on behalf of the children is our main source of funding. We hope that you too will be touched to reach out to us.
+            Here you will find a list of some of our most urgent needs. You can meet these needs directly by purchasing the items and sending it to us or you can make donations towards meeting these needs. If you have something that you wish to donate but you are not sure if we need it, please contact us. We will be more than happy to tal to you.</p>
           <!-- <div class="">
             <a routerLink="" class="btn-get-started">Want to know more? Check out our frequently asked question</a>
           </div> -->
@@ -17,56 +19,54 @@
         
       <div style="margin-top: 2rem;">
         <div class="section-title">
-            <h2>
+            <!-- <h2>
                Constant Challenges: 
+
+            </h2> -->
+            <h2>
+               General Need 
 
             </h2>
-            <p>
-               Constant Challenges: 
-
-            </p>
         </div>
-       <ul>
-           <li>Scholarship (ranging from primary to Tertiary)</li>
-           <li>Coast buses: this poise as the major overriding problem. The need cannot be over emphasized</li>
-           <li>School fees.  (Primary - Tertiary Institutions)</li>
-           <li>Educational/outdoor games materials, Laptops, School desks and chairs</li>
-           <li>School shoes/sucks/belts</li>
-           <li>Sanitizers/nose masks</li>
-           <li>Registration of the school with the Ministry of Education.          </li>
-           <li>Plans to alleviate the school bungalow to upstairs.</li>
-           <li>Volunteer staff (Administrative, teaching, Music lessons, Computer Class, Art and Craft works, Vocational trainings)
+       <ul style="font-size: 19px;">
+           <li><i class="icofont-dotted-right"></i>Scholarship (ranging from primary to Tertiary)</li>
+           <li><i class="icofont-dotted-right"></i>Coast buses: this poise as the major overriding problem. The need cannot be over emphasized</li>
+           <li><i class="icofont-dotted-right"></i>School fees.  (Primary - Tertiary Institutions)</li>
+           <li><i class="icofont-dotted-right"></i>Educational/outdoor games materials, Laptops, School desks and chairs</li>
+           <li><i class="icofont-dotted-right"></i>School shoes/sucks/belts</li>
+           <li><i class="icofont-dotted-right"></i>Sanitizers/nose masks</li>
+           <li><i class="icofont-dotted-right"></i>Registration of the school with the Ministry of Education.          </li>
+           <li><i class="icofont-dotted-right"></i>Plans to alleviate the school bungalow to upstairs.</li>
+           <li><i class="icofont-dotted-right"></i>Volunteer staff (Administrative, teaching, Music lessons, Computer Class, Art and Craft works, Vocational trainings)
           </li>
-           <li>Televisions/Electrical gadgets
+           <li><i class="icofont-dotted-right"></i>Televisions/Electrical gadgets
           </li>
-           <li>Chairs, tables and home appliances for three shelters 
+           <li><i class="icofont-dotted-right"></i>Chairs, tables and home appliances for three shelters 
           </li>
-           <li>Cars for day to day movement for Coordinators/Staff</li>
-           <li>Food stuff/Beverages</li>
-           <li>Toothpaste/brush</li>
-           <li>Toiletries/Sanitary Towel
+           <li><i class="icofont-dotted-right"></i>Cars for day to day movement for Coordinators/Staff</li>
+           <li><i class="icofont-dotted-right"></i>Food stuff/Beverages</li>
+           <li><i class="icofont-dotted-right"></i>Toothpastes/brush</li>
+           <li><i class="icofont-dotted-right"></i>Toiletries/Sanitary Towel
           </li>
-           <li>Inverter/Generator</li>
-           <li>Ironed bunk beds/beddings</li>
-           <li>Slippers</li>
-           <li>Carpet/Tiles/Rug/Grass carpet for the school playground</li>
-           <li>Financial Support
+           <li><i class="icofont-dotted-right"></i>Inverters/Generators</li>
+           <li><i class="icofont-dotted-right"></i>Ironed bunk beds/beddings</li>
+           <li><i class="icofont-dotted-right"></i>Slippers</li>
+           <li><i class="icofont-dotted-right"></i>Carpet/Tiles/Rug/Grass carpet for the school playground</li>
+           <li><i class="icofont-dotted-right"></i>Financial Support
           </li>
-           <li>Staff salary</li>
-           <li>Prayers</li>
-           <li>Motor cycle for the missionaries</li>
-           <li>Residential house rent</li>
+           <li><i class="icofont-dotted-right"></i>Motor cycle for the missionaries</li>
+           <li><i class="icofont-dotted-right"></i>Cash donations</li>
        </ul>
        <!-- <div class="">
         <a routerLink="" class="btn-get-started">You too can be a part of what God is doing at JCM. Find out here</a>
       </div> -->
       </div>
-      <div>
+      <!-- <div>
         <p>Acc. Names:  &nbsp; JESUS CHILDREN MISSIONS OUTREACH</p>
         <p>Acc. No & Bank:  &nbsp;  1010541138  &nbsp;  UBA BANK, BODIJA BRANCH, IBADAN. </p>
         <p>Acc. No & Bank &nbsp; 0029581422  &nbsp;  GUARANTY TRUST BANK, IBADAN
         </p>
-      </div>
+      </div> -->
      
      
     </div>
