--- a/src/app/shared/components/tender-lift-content/tender-lift-content.component.html
+++ b/src/app/shared/components/tender-lift-content/tender-lift-content.component.html
@@ -2,13 +2,13 @@
     <div class="container">
         <div>
             <div class="section-title">
+                <!-- <h2>
+                  SCHOOL PROJECTS
+                </h2> -->
                 <h2>
-                  SCHOOL PROJECTS
-                </h2>
-                <p>
-                  SCHOOL PROJECTS
+                  THE SCHOOL
 
-                </p>
+                </h2>
             </div>
           <p>Tenderlift Care Missions Schools which comprises of Nursery, Primary and Junior High Schools, in both urban and rural settings, suffered a setback just like other schools were affected by the lockdown. Though our major challenges still remain Staff/Teachers and the registration of the schools with the appropriate agencies in the State. Our motto is Sound Teaching and Wisdom. The challenges of funds for adequate running is still a limitation.</p>
           <p>The population of the schools, in 2020 was 159, of which 70% were from the shelters. (righteousness, Peace and Joy Homes) 20% are orphaned and vulnerable in the community on scholarship while others are fee payers whose funds boost the financial obligations of the schools a little. Our major source of funding remain donations/charity.</p>
@@ -16,59 +16,6 @@
             <a routerLink="" class="btn-get-started">Want to know more? Check out our frequently asked question</a>
           </div> -->
         </div>
-        
-      <div style="margin-top: 2rem;">
-        <div class="section-title">
-            <h2>
-                WIDOWS, THE AGED/COMMUNITY PROJECTS
-            </h2>
-            <p>
-                WIDOWS, THE AGED/COMMUNITY PROJECTS
-            </p>
-        </div>
-        <div>
-          <p>JCMO, as an entity believes strongly on the need to get back to the Society that has given us this hope, space and love. What we do under this is clear, we recognize ‘a child’ ‘the community’ and play a part as affordable.
-          </p>
-          <p>Community children placed on scholarship, receives different form of supports including assisting their parents/relations care for them, ranging from Medicals, Accommodations, and other forms of support, made available. One of such who has been on the list over 7 years, is, Mrs. Oladeji, one of the widows in our project, who lives in a dilapidated apartment. We made visible project success, through funds raised for her. We bought 6 bundles of roofing sheets, cements and planks for renovation. Her medical bills and medications was handled. She was supported during the pandemic. Mattress, pillow, foodstuff and cash was made available at all time for her. </p>
-        </div>
-       <!-- <div class="">
-        <a routerLink="" class="btn-get-started">You too can be a part of what God is doing at JCM. Find out here</a>
-      </div> -->
-      </div>
-      <div style="margin-top: 2rem;">
-        <div class="section-title">
-            <h2>
-                FIELD PROJECTS/CARE FOR MISSIONARIES 
-            </h2>
-            <p>
-                FIELD PROJECTS/CARE FOR MISSIONARIES 
-            </p>
-        </div>
-        <div>
-          <p>The Lockdown was a major restriction because we were unable to meet up with the year 2020 plans. But before then, the Field Mission team, have toured round. God bless all the sponsors and partners in this outreaches.
-          </p>
-          <p>Summation</p>
-          <ul>
-            <li>
-              2020 zero tolerance to FGM, GBV and Early Marriage was the first we had in BADEKU village, Ona Ara Local Government, Oyo State. At the same village, on another trip, JCMO initiated the move for Child Protection Network, Oyo State, to have a follow up on the same campaign.
-
-            </li>
-            <li>Also, we had same in Ofe-Ogun, Iwa Jowa Local government area of Oyo State.</li>
-            <li>Provision of bedding, mobile phone, foodstuff to the missionaries at Ofe-Ogun.</li>
-            <li>Provision of financial capital to set up business for a Missionary’s wife (Confectionary).</li>
-            <li>Provision of well water in Ofe- Ogun in conjunction with Christian Growth Foundation.</li>
-            <li>Aside provision of stationaries to all our schools in the field, incentives were given to the best pupils, in recognition of academic and exceptional skills.</li>
-            <li>At Gberupane, Kwara State and part of Saki West, a sensitization campaign against Child Marriage, FGM and the Covid19 Pandemic was organized</li>
-            <li>Another success was the drilling of borehole which has been a major issue over decades in the said village. You will give me the privilege of appreciating Mr. Abraham Kali who is part of the family. He took up this challenge from the inception to the end and tag it birthday present which was actually the request of Rosemary for her 2020 birthday. Relief materials was also sent to the mission field.</li>
-            <li>Welfare packages for Missionaries who are within JCMO coverage fields, ranging from their personal needs and community needs. Along this, vocations were created/empowerment skills to boast their finance.</li>
-            
-          </ul>
-        </div>
-       <!-- <div class="">
-        <a routerLink="" class="btn-get-started">You too can be a part of what God is doing at JCM. Find out here</a>
-      </div> -->
-      </div>
-     
-     
+      
     </div>
   </section>
