--- a/src/app/shared/components/volunteer-content/volunteer-content.component.html
+++ b/src/app/shared/components/volunteer-content/volunteer-content.component.html
@@ -2,14 +2,43 @@
     <div class="container">
         <div>
             <div class="section-title">
-                <h2>
+                <!-- <h2>
                    Volunteer Opportunities
-                </h2>
-                <p>
+                </h2> -->
+                <h2>
                   How can I volunteer?
-                </p>
+                </h2>
             </div>
-          <p>As teacher in the elementary or the Junior high school, Home lesson teacher, Music Instructor, Dance Instructor, Computer Instructor, vocational training programme, take care of children, cleaning/washing exercise, cooking, Teacher of the Word, Prayer Coordinator/Counsellor, Social Worker etc</p>
+          <!-- <p>As teacher in the elementary or the Junior high school, Home lesson teacher, Music Instructor, Dance Instructor, Computer Instructor, vocational training programme, take care of children, cleaning/washing exercise, cooking, Teacher of the Word, Prayer Coordinator/Counsellor, Social Worker etc</p> -->
+          <p>Since Inception, Jesus Children Missions has relied on the generosity of volunteers. As a volunteer at the Home, you have an amazing opportunity to invest in the lives of young Children with great promise. Regardless of your academic background, there will always be room for you to do what you love to do and be of tremendous help to the Ministry. In return, you will get an amazing experience with kids who are open, receptive and respectful. We are able to create a program to match your skillset be at with the school arm of the Ministry or within the Home.
+            By volunteering with us, your interpersonal skills will improve, you will get to meet people from different ethnic backgrounds, learn new languages or dialects but most importantly, help a child become better at something. Understanding life from a child's perspective is a wonderful thing that we guarantee you will get by volunteering with us.</p>
+            <p>We currently need volunteers in these areas:</p>
+            <ul style="font-size: 19px;">
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Elementary/Primary School teachers</li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Assistants -- for helping with logistics</li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Doctors/Dentists/Nurses</li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Music Teachers
+              </li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Computer literacy teachers</li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                Child Counselors</li>
+              <li>
+                <i class="icofont-stylish-right"></i>
+                People with Culinary skills</li>
+            </ul>
+            <p>If your skills don't fall into the categories above, no problem. Give us a call, send us an email or simply send us a message through the <span><a routerLink="/contact">contact Us Form</a></span>
+              If you live outside Nigeria, that's okay too. Together we can plan how you too can be a part of what God is doing at Jesus Children Missions. We look forward to having you visit with us.</p>
 
             <!-- <div class="">
             <a routerLink="" class="btn-get-started">Want to know more? Check out our frequently asked question</a>
