--- a/src/app/layout/components/footer/footer.component.html
+++ b/src/app/layout/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer id="footer">
-  <div class="footer-top"></div>
+  <!-- <div class="footer-top"></div> -->
   <div class="container">
     <div class="copyright">
       &copy; Copyright {{ today | date: "yyyy" }}
