--- a/src/app/layout/components/header/header.component.html
+++ b/src/app/layout/components/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
   <div class="logo">
     <h1 class="text-light">
-      <a class="" href=""><span style="font-size: 1.2rem">JCMOUTREACH</span></a>
+      <a class="" routerLink="/"><span style="font-size: 1.2rem">JCMOUTREACH</span></a>
     </h1>
   </div>
 
@@ -22,12 +22,14 @@
       <li class="drop-down">
         <a>About Us</a>
         <ul>
-          <li><a routerLink="/about">About Jesus Children Missions</a></li>
+          <li><a routerLink="/about">About Us</a></li>
           <li><a routerLink="/tenderlift">TenderLift Junior Grade</a></li>
           <li><a routerLink="/volunteer">Volunteer Opportunities</a></li>
           <li><a routerLink="/faq">Frequently asked Questions</a></li>
+          <li><a routerLink="/outreachprograms">Outreach programs</a></li>
         </ul>
       </li>
+      <li><a routerLink="/children">Children</a></li>
       <li><a routerLink="/support">Support</a></li>
       <li><a routerLink="/contact">Contact Us</a></li>
     </ul>
