--- a/src/app/modules/contact/pages/contact/contact.component.html
+++ b/src/app/modules/contact/pages/contact/contact.component.html
@@ -1,4 +1,4 @@
 <div>
-  <app-breadcrumb></app-breadcrumb>
+  <!-- <app-breadcrumb></app-breadcrumb> -->
   <app-contact-section></app-contact-section>
 </div>
