--- a/src/app/modules/faq/pages/faq/faq.component.html
+++ b/src/app/modules/faq/pages/faq/faq.component.html
@@ -1,4 +1,4 @@
 <div>
-  <app-breadcrumb></app-breadcrumb>
+  <!-- <app-breadcrumb></app-breadcrumb> -->
   <app-faq-section></app-faq-section>
 </div>
