--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -6,7 +6,7 @@
   <app-gallery-section></app-gallery-section>
   <!-- <app-testimonial-section></app-testimonial-section> -->
   <app-team-section></app-team-section>
-  <app-faq-section></app-faq-section>
-  <app-contact-section></app-contact-section>
+  <!-- <app-faq-section></app-faq-section> -->
+  <!-- <app-contact-section></app-contact-section> -->
   <!-- <app-pre-loader></app-pre-loader> -->
 </div>
