--- a/src/app/modules/support/pages/support/support.component.html
+++ b/src/app/modules/support/pages/support/support.component.html
@@ -1,4 +1,4 @@
 <div>
-  <app-breadcrumb></app-breadcrumb>
+  <!-- <app-breadcrumb></app-breadcrumb> -->
   <app-support-content></app-support-content>
 </div>
