--- a/src/app/shared/components/about-inner-content/about-inner-content.component.css
+++ b/src/app/shared/components/about-inner-content/about-inner-content.component.css
@@ -1,6 +1,7 @@
 section {
   padding: 60px 0;
   overflow: hidden;
+  font-size: 1.2rem;
 }
 
 .section-bg {
@@ -8,10 +9,10 @@ section {
 }
 
 .section-title {
-  padding-bottom: 40px;
+  padding-bottom: 20px;
 }
 
-.section-title h2 {
+/* .section-title h2 {
   font-size: 14px;
   font-weight: 500;
   padding: 0;
@@ -22,40 +23,61 @@ section {
   color: #aaaaaa;
   font-family: "Poppins", sans-serif;
 }
+#horizontal_line {
+  background-color: #aaaaaa;
+  width: 100%;
+  height: 2px;
+  margin-top: auto;
+  margin-bottom: 10px;
+}
 
 .section-title h2::after {
   content: "";
-  width: 120px;
+  width: 50px;
   height: 1px;
   display: inline-block;
   background: #1acc8d;
   margin: 4px 10px;
-}
+} */
 
-.section-title p {
+.section-title h2 {
   margin: 0;
-  margin: 0;
-  font-size: 36px;
+  font-size: 26px;
   font-weight: 700;
   text-transform: uppercase;
   font-family: "Poppins", sans-serif;
   color: #010483;
 }
+
 .btn-get-started {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   font-size: 16px;
   letter-spacing: 1px;
   display: inline-block;
-  padding: 10px 30px;
+  /* padding: 10px 30px; */
   border-radius: 50px;
   transition: 0.5s;
-  color: #fff;
-  background: #1acc8d;
+  color: #010483;
+  text-decoration: underline;
+  /* background: #1acc8d; */
 }
 .btn-get-started:hover {
-  background: #17b57d;
+  /* background: #17b57d; */
+  text-decoration: underline;
+  color: red;
+}
+.inner-page ul{
+  list-style: none;
+  padding: 0;
 }
 .inner-page ul li {
-  padding: 0.075rem;
+  /* padding: 0.075rem; */
+  padding-bottom: 10px;
+  
+}
+.inner-page ul i {
+  font-size: 20px;
+  padding-right: 4px;
+  color: #1acc8d;
 }
