--- a/src/app/shared/components/about-inner-content/about-inner-content.component.html
+++ b/src/app/shared/components/about-inner-content/about-inner-content.component.html
@@ -2,101 +2,66 @@
   <div class="container">
     <div>
       <div class="section-title">
-        <h2>How it all started</h2>
-        <p>How it all started</p>
+        <!-- <h2>How it all started</h2> -->
+        <h2>About us</h2>
+        <!-- <div id="horizontal_line"></div> -->
+        
       </div>
       <p>
-        Jesus Children Missions Outreach was founded by Mrs. Rosemary Odigbo in
-        2001 in the city of Ibadan, Oyo State, Nigeria. Prior to starting the
-        ministry, Mrs. Odigbo worked as a missionary for about a decade in Kwara
-        State and other parts of Nigeria. In many rural communities in Nigeria,
-        poverty and less than Ideal socio-economic situations put the lives of
-        many children at risk. Inadequate educational facilities, lack of proper
-        nutrition and medical care centres, in general make many parts of rural
-        Nigeria very high risk places to raise children. In view of this, Jesus
-        Childre Missions' focus is on less privileged children particularly from
-        rural areas. Some of the children from these areas, especially the
-        orphans who are generally socially and econonmically vulnerable, often
-        lack proper care,physical security from abuse and molestation,
-        education, adequate nutrition and proper clothing and medical care among
-        other things. Girls raised in these environments are often forced into
-        early marriages which greatly diminish their potential in life. It is
-        not uncommon to find children from these environments loitering in
-<<<<<<< HEAD
-        economically depressed sections of Nigerian cities and villages. <br> Because
-=======
-        economically depressed sections of Nigerian cities and villages. Because
->>>>>>> d3799964db8208f4aea946a5f1b448d8c8a72f95
-        of their unique economic challenges, children from these backgrounds are
-        sometimes saddled with adult responsibilities such as providing for
-        their families, being care givers to much younger members of their
-        families and generally doing all they can to survive. Most of the kids
-        in these deplorable economic conditions have lost their parents at an
-        early age to HIV/AIDS or other life threatning diseases. In addition to
-        surviving on their own, these children are often stigmatized or rejected
-        by their communities, thus compunding their already very weak positions
-        in society. These observations and experiences as a missionary and
-        involvement with Children as well as working with different people
-        groups both in the urban and the rural areas and her commitment to
-        serving God was the main driving force behind the establishment of the
-        Missions Outreach.
+        Jesus Children Missions Outreach was founded by Mrs. Rosemary Odigbo in 2001 in the city of Ibadan, Oyo State, Nigeria. Prior to starting the ministry, Mrs. Odigbo worked as a missionary for about a decade in Kwara State and other parts of Nigeria.<br><br>
+
+In many rural communities in Nigeria, poverty and less than Ideal socio-economic situations put the lives of many children at risk. Inadequate educational facilities, lack of proper nutrition and medical care centres, in general make many parts of rural Nigeria very high risk places to raise children. In view of this, Jesus Children Missions' focus is on less privileged children particularly from rural areas. Some of the children from these areas, especially the orphans who are generally socially and econonmically vulnerable, often lack proper care,physical security from abuse and molestation, education, adequate nutrition and proper clothing and medical care among other things. Girls raised in these environments are often forced into early marriages which greatly diminish their potential in life. Want to know more? You can check out our frequently asked question<br>
+
+
       </p>
       <div class="">
         <a routerLink="/faq" class="btn-get-started"
-          >Want to know more? Check out our frequently asked question</a
+          >Frequently asked Questions</a
         >
       </div>
     </div>
 
     <div style="margin-top: 2rem">
       <div class="section-title">
-        <h2>Our Vision</h2>
-        <p>Our vision</p>
+        <!-- <h2>Our Vision</h2> -->
+        <h2>Our vision</h2>
       </div>
-<<<<<<< HEAD
       <p>Our expectation in Jesus Children Missions Outreach is to put in place measures to improve the visibility of the children under our umbrella by providing homes, shelter facilities (Mission House) and schools for over 1000 identified children, in the next ten years and to empower and assist widows/widowers and sponsor missionaries in various ways as the need may arise, which include medical helps and to work closely with some people groups in established Mission bases.</p>
-=======
->>>>>>> d3799964db8208f4aea946a5f1b448d8c8a72f95
       <ul>
         <li>
+          <i class="icofont-hand-right"></i>
           Our goal at Jesus Children Missions Outreach is to provide shelter
           facilities (Mission House) and schools for over 1000 identified
           children, in the next ten years.
         </li>
         <li>
+          <i class="icofont-hand-right"></i>
           Produce future leaders equipped with innovative sound teaching, wisdom
           of God,integrity, sincerity, hard work, intelligence and godliness
         </li>
         <li>
-<<<<<<< HEAD
+          <i class="icofont-hand-right"></i>
           The broad mission is that these children would become shining lights that would positively inflame their communities and the world at large
         </li>
         <li>
+          <i class="icofont-hand-right"></i>
           Train them to live a safe and productive life and play a meaningful role in the nation by the grace of God. Activities engaged in, are important step towards achieving brilliant future for the children in Nigeria and other countries, through the shelters, home base care with partners, and their families.
 
         </li>
-        <li>Help targeted children discover their God given potentials, and give them opportunity to excel in life.</li>
-        <li>The broad and long term vision is to produce a society that is healthy, safe and free from all forms of unhealthy vices.</li>
-=======
-          Educate the children of missionaries so their parents can focus on the
-          work of evangelism.
-        </li>
         <li>
-          Train then to live a safe and productive life and to play a meaningful
-          role in the nation by the grace of God
-        </li>
->>>>>>> d3799964db8208f4aea946a5f1b448d8c8a72f95
+          <i class="icofont-hand-right"></i>
+          Help targeted children discover their God given potentials, and give them opportunity to excel in life.</li>
+        <li>The broad and long term vision is to produce a society that is healthy, safe and free from all forms of unhealthy vices.</li>
       </ul>
+      <p>You too can be a part of what God is doing at JCM. </p>
       <div class="">
         <a routerLink="/volunteer" class="btn-get-started"
-          >You too can be a part of what God is doing at JCM. Find out here</a
+          >Find out here</a
         >
       </div>
     </div>
-    <div style="margin-top: 2rem">
+    <!-- <div style="margin-top: 2rem">
       <div class="section-title">
-<<<<<<< HEAD
-        <h2>THE CHILDREN HOME/ORPHANGE</h2>
         <p>THE CHILDREN HOME/ORPHANGE</p>
       </div>
       <p>This vision is still standing since 2001, with the help of notable stakeholders, individuals, organizations staffs, volunteers at different period. It is on this note, we recognize the impact made by these Angels of Hope and heroes who have stood for humanity and projecting this dreams passionately through JCMO.</p>
@@ -110,76 +75,37 @@
           Our children are encouraged to make friends, visit friends and the friends’ in turn comes by to the Home to visit them. Every child is attached to a Caregiver, who monitors the child, attends to the child and provide big brother or big sister needs.</p>
         <p>The care givers are exposed to training programmes and are made to adhere to the code of conducts set through the Child right Protection Policies and the Organization. No year runs out without training programs for our Caregivers. Notable among these is the two days training, organized by Civil Defense (South West Headquarters;) on SEXUAL AND GENDER BASE VIOLENCE, headed by Officer Afe.</p>
         <p>Targets at first intake are children between a days old -14 years from various settings and with different story backgrounds. </p>
-=======
-        <h2>Our Mission</h2>
-        <p>Our mission</p>
-      </div>
-      <ul>
-        <li>
-          Partner with Governments, individuals, organizations etc to reach
-          vulnerable children and offer them relief
-        </li>
-        <li>
-          Help the targeted children discover their God given potentials, and
-          give them opportunityto excel in life
-        </li>
-        <li>
-          Reaching out to communities within the city with educational
-          facilities and medical outreaches
-        </li>
-        <li>
-          Partner with missionaries and give necessary supports and assistance
-        </li>
-      </ul>
->>>>>>> d3799964db8208f4aea946a5f1b448d8c8a72f95
       <div class="">
         <a routerLink="/contact" class="btn-get-started"
           >You too can be a part of what God is doing at JCM. Find out here</a
         >
       </div>
-    </div>
+    </div> -->
     <div style="margin-top: 2rem">
       <div class="section-title">
-<<<<<<< HEAD
+        <!-- <h2>Other projects</h2> -->
         <h2>Other projects</h2>
-        <p>Other projects</p>
       </div>
       <ul>
-        <li>Reaching out to communities within the city and villages with educational facilities and medical outreaches</li>
         <li>
+          <i class="icofont-hand-right"></i>
+          Reaching out to communities within the city and villages with educational facilities and medical outreaches</li>
+        <li>
+          <i class="icofont-hand-right"></i>
           Reach our Mission bases with education, medicals and the gospel.
 
         </li>
-        <li>Partner with missionaries and give necessary supports and assistance.</li>
+        <li>
+          <i class="icofont-hand-right"></i>
+          Partner with missionaries and give necessary supports and assistance.</li>
         <li>Make missionary work stress less by assisting them in various ways which include training their children.</li>
 
       </ul>
-      <p>Another phase of the project is to reach the widows/widowers and their children, reach out to communities within the city, the elderly, and missionaries and establish Mission work in selected geographical locations within and outside Nigeria.</p>
-      <p>Since 2001, JCMO, has integrated in phases, implementing projects in several rural and urban communities in Nigeria. The year 2020 was not an exception in spite of the challenges in the country. Some villages in Ona Ara, Iwajowa, Ibarapa, Ibadan North Local government and some parts of Kwara State were visited and projects carried out, included provision of Borehole, Well water, sensitization against Covid 19. provision of Sanitizers, liquid soaps, tap buckets, nose masks, clothing, educational materials/tools, food items, mobile phones for missionaries, children and in the communities, Household empowerment schemes and campaign against Female Genital Mutilation (FGM), Early Marriage and Gender Based Violence (GBV). </p>
-=======
-        <h2>Our Commitment to the children</h2>
-        <p>Our Commitment to the children</p>
-      </div>
-      <p>
-        These are our commitment to the children under our care and and
-        management. We are committed to:
-      </p>
-      <ul>
-        <li>Exposing the Children to the truth of God's word, the Bible</li>
-        <li>
-          Providing comfortable shelter to the orphaned and vulnerable children
-        </li>
-        <li>Providing adequate nutritious meals for the children</li>
-        <li>Helping the Childrn get the best education</li>
-        <li>
-          Providing a nurturing environment for a well balanced emotional and
-          psychosocial health for the children
-        </li>
-      </ul>
->>>>>>> d3799964db8208f4aea946a5f1b448d8c8a72f95
+      <p>Another phase of the project is to reach the widows/widowers and their children, reach out to communities within the city, the elderly, and missionaries and establish Mission work in selected geographical locations within and outside Nigeria. Want to support? </p>
+      <!-- <p>Since 2001, JCMO, has integrated in phases, implementing projects in several rural and urban communities in Nigeria. The year 2020 was not an exception in spite of the challenges in the country. Some villages in Ona Ara, Iwajowa, Ibarapa, Ibadan North Local government and some parts of Kwara State were visited and projects carried out, included provision of Borehole, Well water, sensitization against Covid 19. provision of Sanitizers, liquid soaps, tap buckets, nose masks, clothing, educational materials/tools, food items, mobile phones for missionaries, children and in the communities, Household empowerment schemes and campaign against Female Genital Mutilation (FGM), Early Marriage and Gender Based Violence (GBV). </p> -->
       <div class="">
         <a routerLink="/support" class="btn-get-started"
-          >Want to support? Check out our support page</a
+          >Check out our support page</a
         >
       </div>
     </div>
