--- a/src/app/shared/components/carousel/carousel.component.css
+++ b/src/app/shared/components/carousel/carousel.component.css
@@ -25,7 +25,7 @@
   
   #hero h1 {
     margin: 0 0 20px 0;
-    font-size: 48px;
+    font-size: 32px;
     font-weight: 700;
     line-height: 56px;
     color: #fff;
@@ -49,7 +49,7 @@
     letter-spacing: 1px;
     display: inline-block;
     padding: 10px 30px;
-    border-radius: 50px;
+    /* border-radius: 50px; */
     transition: 0.5s;
     color: #fff;
     background: #1acc8d;
