--- a/src/app/shared/components/contact-section/contact-section.component.css
+++ b/src/app/shared/components/contact-section/contact-section.component.css
@@ -35,7 +35,7 @@ section {
   .section-title p {
     margin: 0;
     margin: 0;
-    font-size: 36px;
+    font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
@@ -158,7 +158,7 @@ section {
     padding: 10px 12px;
   }
   
-  button[type="submit"] {
+  input[type="submit"] {
     background: #1acc8d;
     border: 0;
     padding: 10px 30px;
@@ -166,8 +166,14 @@ section {
     transition: 0.4s;
     border-radius: 50px;
   }
+  .success{
+    border: 1px solid greenyellow;
+    }
+    .text-error{
+        color: red;
+    }
   
-  button[type="submit"]:hover {
+  input[type="submit"]:hover {
     background: #34e5a6;
   }
   
