--- a/src/app/shared/components/contact-section/contact-section.component.html
+++ b/src/app/shared/components/contact-section/contact-section.component.html
@@ -12,20 +12,20 @@
           <div class="info">
             <div class="address">
               <i class="icofont-google-map"></i>
-              <h4>Location:</h4>
+              <!-- <h4>Location:</h4> -->
               <p>No. 5 ladipo Tejumola Street, New Bodija, Ibadan, Oyo State, Nigeria. </p>
             </div>
 
             <div class="email">
               <i class="icofont-envelope"></i>
-              <h4>Email:</h4>
+              <!-- <h4>Email:</h4> -->
               <p> jcmoutreach2017@gmail.com</p>
               <p></p>
             </div>
 
             <div class="phone">
               <i class="icofont-phone"></i>
-              <h4>Call:</h4>
+              <!-- <h4>Call:</h4> -->
               <p>+234 8033 843762</p>
               <p>+234 8074286452</p>
               <p>+234 8034298538</p>
@@ -35,29 +35,99 @@
 
         </div>
 
-        <div class="col-lg-8 mt-5 mt-lg-0" data-aos="fade-left" data-aos-delay="200">
+        <div class="col-lg-8 mt-5 mt-lg-0 kwes-form" data-aos="fade-left" data-aos-delay="200">
 
-          <form action="" method="post" role="form" class="">
+          <form name="myForm" ngNativeValidate #formSubmit = "ngForm" (ngSubmit) = "onClickSubmit(formSubmit)" action="https://kwes.io/api/foreign/forms/WvQhNyjkl7rib1qKcaZ5" method="POST" role="form" class="">
+            <div class="row mb-2 text-center"  *ngIf="showMsg">
+              <div class="col-xs-12">
+                <p class="alert alert-success">
+                    <strong>Thanks for reaching out! We would get back to you shortly.</strong>
+                </p>
+              </div>
+            </div>
             <div class="form-row">
               <div class="col-md-6 form-group">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                <div class="validate"></div>
+                <input class="form-control"
+                       id="nameId"
+                       type="text"
+                       placeholder="Name"
+                       required
+                       (ngModel)="name"
+                       name="name"
+                       #nameVar="ngModel"
+                />
+              
+               
               </div>
+
               <div class="col-md-6 form-group">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" />
-                <div class="validate"></div>
+                <input class="form-control"
+                       id="emailId"
+                       type="text"
+                       placeholder="Email"
+                       required
+                       (ngModel)="email"
+                       name="email"
+                       #emailVar="ngModel"
+                       pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+                />
               </div>
+              
+              <!-- <div class="col-md-6 form-group">
+                          <input class="form-control" type="email" required id="emailId" name="email" (ngModel)="email" required placeholder="Email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,3}$"
+                  ngModel #emailref="ngModel"
+                  [ngClass]="{'is-invalid': (  emailref.touched || emailref.dirty) && !emailref.valid }" />
+                  <span class="invalid-feedback">
+                    <span *ngIf="emailref.errors?.required">
+                      Your Email is required.
+                    </span>
+                  </span>
+              </div> -->
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-              <div class="validate"></div>
+              <input class="form-control"
+              id="subjectId"
+              type="text"
+              placeholder="Subject"
+              required
+              (ngModel)="subject"
+              name="subject"
+              #subjectVar="ngModel"
+             />
+       <!-- <span class="invalid-feedback">
+         <span *ngIf="subjectVar.errors?.required">
+           A Subject is required.
+         </span>
+       </span> -->
             </div>
             <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Please write something for us" placeholder="Message"></textarea>
-              <div class="validate"></div>
+              <textarea class="form-control"
+              id="messageId"
+              rows="5"
+              type="text"
+              placeholder="Message"
+              required
+              (ngModel)="message"
+              name="message"
+              #messageVar="ngModel"
+              ></textarea>
+       <!-- <span class="invalid-feedback">
+         <span *ngIf="messageVar.errors?.required">
+          Please write something for us.
+         </span>
+       </span> -->
             </div>
-            <div class="text-center"><button type="submit" class="btn-get-started">Send Message</button></div>
+            <div class="card mt-3">
+              <div class="card-body">
+                  <div #recaptcha ></div>
+              </div>
+          </div>
+            <!-- <div class="text-center"><button type="submit" class="btn-get-started mt-2">Send Message</button></div> -->
+            <div class="text-center mt-2"><input type = "submit" value = "Send Message" ></div>
+            
+           
           </form>
+          
 
         </div>
 
