--- a/src/app/shared/components/counts-section/counts-section.component.html
+++ b/src/app/shared/components/counts-section/counts-section.component.html
@@ -4,37 +4,46 @@
 
       <div class="row" data-aos="fade-up">
 
-        <div class="col-lg-3 col-md-6">
-          <div class="count-box">
-            <i class="icofont-simple-smile"></i>
-            <span data-toggle="counter-up">500</span>
-            <p>Happy children</p>
-          </div>
+        <div class="col-lg-4 col-md-6">
+          <a routerLink = "/children">
+            <div class="count-box">
+              <i class="icofont-simple-smile"></i>
+              <span data-toggle="counter-up">500</span>
+              <p>Happy children</p>
+            </div>
+          </a>
+          
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="icofont-document-folder"></i>
-            <span data-toggle="counter-up">521</span>
-            <p>Projects</p>
-          </div>
+        <div class="col-lg-4 col-md-6 mt-5 mt-md-0">
+          <a routerLink="/outreachprograms">
+            <div class="count-box">
+              <i class="icofont-document-folder"></i>
+              <span data-toggle="counter-up">50</span>
+              <p>Outreach Programs</p>
+            </div>
+          </a>
+          
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="icofont-live-support"></i>
-            <span data-toggle="counter-up">1,463</span>
-            <p>AVAVAVAV</p>
-          </div>
+        <div class="col-lg-4 col-md-6 mt-5 mt-lg-0">
+          <a routerLink="/volunteer">
+            <div class="count-box">
+              <i class="icofont-users-alt-5"></i>
+              <span data-toggle="counter-up">200</span>
+              <p>Volunteer opportunities</p>
+            </div>
+          </a>
+         
         </div>
 
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
+        <!-- <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
-            <i class="icofont-users-alt-5"></i>
+            <i class="icofont-book-alt"></i>
             <span data-toggle="counter-up">20</span>
             <p>Courses</p>
           </div>
-        </div>
+        </div> -->
 
       </div>
 
