--- a/src/app/shared/components/details-section/details-section.component.css
+++ b/src/app/shared/components/details-section/details-section.component.css
@@ -33,10 +33,11 @@
     letter-spacing: 1px;
     display: inline-block;
     padding: 10px 30px;
-    border-radius: 50px;
+    /* border-radius: 50px; */
     transition: 0.5s;
     color: #fff;
     background: #1acc8d;
+    cursor: pointer;
   }
   .btn-get-started:hover {
     background: #17b57d;
