--- a/src/app/shared/components/faq-section/faq-section.component.html
+++ b/src/app/shared/components/faq-section/faq-section.component.html
@@ -2,23 +2,24 @@
     <div class="container">
 
       <div class="section-title" data-aos="fade-up">
-        <h2>F.A.Q</h2>
+        <!-- <h2>F.A.Q</h2> -->
         <p>Frequently Asked Questions</p>
       </div>
 
       <div class="faq-list">
+        
         <ul>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-1">Where are the Children From?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-1" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-1">Where are the Children From?<i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-1" class="collapse" >
               <p>
                 Our children are drawn from different parts of the country including rural settings where there are no schools, or because of abject poverty, vulnerability, orphaned, indigent or missionaries others are through the collaborations of the Ministry of Women Affairs, Civil Defense Corps, the Police, Federation of Women Lawyers (FIDA), RRT and concerned citizens.  
               </p>
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-2">Is Jesus Children Missions Outreach an Orphanage or a Children Ministry?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-2" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-2">Is Jesus Children Missions Outreach an Orphanage or a Children Ministry?<i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-2" class="collapse" >
               <p>
                 It is a mission home with different operational units. These are, Children home, field work in villages, Care for widows and senior citizens (the elderly). We also operate schools for the children under our care and management ( Tender lift Care mission Schools both in Ibadan and Gberupane village in Kwara State). And community Projects.
 Jesus Children Missions Outreach is purely Faith based organization (FBO) that depends on charity and donations to operate. The Ministry, partners with the Oyo State Ministry of Women Affairs and is a registered organization with the Corporate Affairs Commission, Nigeria.
@@ -27,42 +28,42 @@ Jesus Children Missions Outreach is purely Faith based organization (FBO) that d
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-3">What are the age ranges of your Children?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-3" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-3">What are the age ranges of your Children?<i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-3" class="collapse" >
               <p>
                 We typically accept children from 1 day old to 15years. Children outside of these age bracket will be considered on a case by case basis. Because we have been operational since 2001, most of the children we started with are now grown up. The age range of the children and young adults under our care and management currently ranges from 2months old to over twenty years. All young adults older than 18 years who have yet to gain admissions to higher institutions of learning and/or vocational schools are trained and given opportunity to be responsible as care givers and administrative volunteer workers and receive stipends until they gain admission into universities or other higher institutions with full sponsorship by the Ministry.
               </p>
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-4">Are you affiliated to a Church or denomination?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-4" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-4">Are you affiliated to a Church or denomination?<i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-4" class="collapse" >
               <p>
                 Jesus Children Missions Outreach is not affiliated to any Church or denomination but is a member of the Association of Orphanages and Home Operators in Nigeria (ASOHON), Association of Orphans and vulnerable children in Nigeria (AONN), Child Protection Network (CPN) and NACRON. We collaborate with other care providers organizations and government agencies, Religious bodies etc
               </p>
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-5">What are your sources of funding?<i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-5" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-5">What are your sources of funding?<i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-5" class="collapse" >
               <p>
                 It is purely Faith based organization (FBO) that depends on charity and donations from individuals, religious bodies, Cooperate organizations etc to operate
               </p>
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-6">Do you offer adoption services?
-              <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-6" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-6">Do you offer adoption services?
+              <i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-6" class="collapse" >
               <p>
                 No
               </p>
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-7">How can I volunteer?
-              <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-7" class="collapse show" data-parent=".faq-list">
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-7">How can I volunteer?
+              <i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-7" class="collapse" >
               <p>
                 As teacher in the elementary or the Junior high school, Home lesson teacher, Music Instructor, Dance Instructor, Computer Instructor, vocational training programme, take care of children, cleaning/washing exercise, cooking, Teacher of the Word, Prayer Coordinator/Counsellor, Social Worker etc
 
@@ -70,10 +71,10 @@ Jesus Children Missions Outreach is purely Faith based organization (FBO) that d
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-8">I want to make a donation, where do I send the money to?
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-8">I want to make a donation, where do I send the money to?
 
-              <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-8" class="collapse show" data-parent=".faq-list">
+              <i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-8" class="collapse" >
               <p>
                 Please contact us: jcmoutreach2017@gmail.com     or make use of the bank details if its money.
 
@@ -84,11 +85,11 @@ Jesus Children Missions Outreach is purely Faith based organization (FBO) that d
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-9">I want to help, what are your most urgent needs?
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-9">I want to help, what are your most urgent needs?
 
 
-              <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-9" class="collapse show" data-parent=".faq-list">
+              <i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-9" class="collapse" >
               <p>
                 Due to the number of children under our care and the different Projects, we are constantly in need of resources. Here is an abridged list of our most urgent needs in no particular order:
               </p>
@@ -113,11 +114,11 @@ Jesus Children Missions Outreach is purely Faith based organization (FBO) that d
             </div>
           </li>
           <li data-aos="fade-up">
-            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapse" href="#faq-list-10">Where do the Children go to School?
+            <i class="bx bx-help-circle icon-help"></i> <a data-toggle="collapse" class="collapsed" href="#faq-list-10">Where do the Children go to School?
 
 
-              <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
-            <div id="faq-list-10" class="collapse show" data-parent=".faq-list">
+              <i class="bx bx-chevron-down icon-close"></i><i class="bx bx-chevron-up icon-show"></i></a>
+            <div id="faq-list-10" class="collapse" >
               <p>
                 Tender Lift Care Mission Schools (established by us for the children in elementary and junior high schools). Fontanna High School New, Aunty Mary Head Start Pillars High School, Shineforth High School, Old Bodija ( Fee paying, private schools, for those in Senior High classes,
               </p>
