--- a/src/app/shared/components/support-content/support-content.component.css
+++ b/src/app/shared/components/support-content/support-content.component.css
@@ -11,7 +11,7 @@ section {
     padding-bottom: 40px;
   }
   
-  .section-title h2 {
+  /* .section-title h2 {
     font-size: 14px;
     font-weight: 500;
     padding: 0;
@@ -30,16 +30,19 @@ section {
     display: inline-block;
     background: #1acc8d;
     margin: 4px 10px;
-  }
+  } */
   
-  .section-title p {
+  .section-title h2 {
     margin: 0;
     margin: 0;
-    font-size: 36px;
+    font-size: 26px;
     font-weight: 700;
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
     color: #010483;
+  }
+  p{
+    font-size: 19px;
   }
   .btn-get-started {
     font-family: "Montserrat", sans-serif;
@@ -56,7 +59,18 @@ section {
   .btn-get-started:hover {
     background: #17b57d;
   }
-  .inner-page ul li{
-      padding: 0.075rem;
+  .inner-page ul{
+    list-style: none;
+    padding: 0;
+  }
+  .inner-page ul li {
+    /* padding: 0.075rem; */
+    padding-bottom: 10px;
+    
+  }
+  .inner-page ul i {
+    font-size: 20px;
+    padding-right: 4px;
+    color: #1acc8d;
   }
   
