--- a/src/app/shared/components/team-section/team-section.component.css
+++ b/src/app/shared/components/team-section/team-section.component.css
@@ -35,7 +35,7 @@ section {
   .section-title p {
     margin: 0;
     margin: 0;
-    font-size: 36px;
+    font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
@@ -45,13 +45,46 @@ section {
 .team {
     background: #fff;
   }
-  
-  .team .member {
-    text-align: center;
-    margin-bottom: 80px;
+
+  #mainCard{
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
     position: relative;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
   }
   
+  .team .member, .team .content {
+    text-align: center;
+    /* margin-bottom: 80px; */
+    /* position: relative; */
+    position: absolute;
+    backface-visibility: hidden;
+  }
+  .team .content{
+    width: 240px;
+    height: 320px;
+    margin: 0 auto !important;
+    background: rgba(255, 255, 255, 0.9);
+    padding: 15px 0;
+    border-radius: 0 0 4px 4px;
+    box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+    transform: rotateY(180deg);
+    overflow-y: scroll;
+  }
+
+  .team .content p{
+    /* font-style: italic; */
+    display: block;
+    font-size: 14px;
+    color: #01036f;
+    padding: 0.075rem;
+  }
+  /* #mainCard:hover {
+    transform: rotateY(180deg);
+  }
+   */
   .team .member .pic {
     border-radius: 4px;
     overflow: hidden;
@@ -119,4 +152,22 @@ section {
   .team .member .social i {
     font-size: 16px;
     margin: 0 2px;
+  }
+
+  .btn-get-started {
+    font-family: "Montserrat", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 5px 10px;
+    border-radius: 50px;
+    transition: 0.5s;
+    color: #fff;
+    background: #010483;
+    margin-top: 10px;
+  }
+  
+   .btn-get-started:hover {
+    background: #010483;
   }
