--- a/src/app/shared/components/tender-lift-content/tender-lift-content.component.css
+++ b/src/app/shared/components/tender-lift-content/tender-lift-content.component.css
@@ -8,10 +8,10 @@ section {
   }
   
   .section-title {
-    padding-bottom: 40px;
+    padding-bottom: 20px;
   }
   
-  .section-title h2 {
+  /* .section-title h2 {
     font-size: 14px;
     font-weight: 500;
     padding: 0;
@@ -30,16 +30,19 @@ section {
     display: inline-block;
     background: #1acc8d;
     margin: 4px 10px;
-  }
+  } */
   
-  .section-title p {
+  .section-title h2 {
     margin: 0;
     margin: 0;
-    font-size: 36px;
+    font-size: 24px;
     font-weight: 700;
     text-transform: uppercase;
     font-family: "Poppins", sans-serif;
     color: #010483;
+  }
+  p, ul li{
+    font-size: 19px;
   }
   .btn-get-started {
     font-family: "Montserrat", sans-serif;
