--- a/src/app/shared/components/carousel/carousel.component.html
+++ b/src/app/shared/components/carousel/carousel.component.html
@@ -6,9 +6,9 @@
           <div data-aos="zoom-out" class="hero-content">
             <h1>Jesus children mission Outreach</h1>
             <h2>Train Up a Child in the way he should go ... Proverbs 12:6</h2> 
-            <div class="text-center text-lg-left">
+            <!-- <div class="text-center text-lg-left">
               <a routerLink="/about" class="btn-get-started scrollto">Who we are</a>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
